# Github2Todoist

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
github_todoist_sync/: sync.py
tests/: test_github_todoist_sync.py
