[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-todoist-sync"
version = "0.1.1"
description = "A tool to sync GitHub issues and PRs to Todoist tasks."
authors = [{ name = "Remco Sprooten", email = "remco@sprooten.org" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]
dependencies = [
    "PyGithub>=2.5.0",
    "todoist_api_python>=2.1.7",
    "pytest>=8.3.3",
]
[project.urls]
Homepage = "https://github.com/1337-42/Github2Todoist"

[project.scripts]
github-todoist-sync = "github_todoist_sync.sync:main"
github-todoist-sync-init = "github_todoist_sync.sync:init_config"
